[gd_scene load_steps=31 format=3 uid="uid://bgvo11j4kfjdc"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_h3eo1"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/generation_button.gd" id="2_plgpl"]
[ext_resource type="Texture2D" uid="uid://c7jti5gp87fni" path="res://Textures/UI/Information/InfoBox.png" id="3_82pmn"]
[ext_resource type="PackedScene" uid="uid://cqfassynt86vn" path="res://Scenes and Scripts/UI/Equation/mini_equation.tscn" id="4_ovcff"]
[ext_resource type="Texture2D" uid="uid://q7kyu3yv27sv" path="res://Textures/Buttons/icons/hammer.png" id="4_xnawx"]
[ext_resource type="Texture2D" uid="uid://c8iesbop3uqwa" path="res://Textures/Buttons/up_down.png" id="5_0rv06"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="5_7m8xa"]
[ext_resource type="FontFile" uid="uid://dtkr82iuj8ovy" path="res://Textures/Fonts/munro-font/Munro-2LYe.ttf" id="5_mj4tj"]
[ext_resource type="Texture2D" uid="uid://dcwv3ofqvfivr" path="res://Textures/Buttons/icons/save_states.png" id="5_rmc36"]
[ext_resource type="PackedScene" uid="uid://bug3v1xlp1gfr" path="res://Scenes and Scripts/UI/Buttons/pull_out_tab_button_right.tscn" id="6_7e8c8"]
[ext_resource type="Script" path="res://Scenes and Scripts/Classes/spin_box.gd" id="6_8ds75"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes and Scripts/Components/button_sound_component.tscn" id="6_aanob"]
[ext_resource type="Texture2D" uid="uid://d16opu3dyhri7" path="res://Textures/Buttons/eye/eye_open.png" id="6_e14j5"]
[ext_resource type="PackedScene" uid="uid://c338whou4al23" path="res://Scenes and Scripts/UI/Tooltip.tscn" id="6_kbwkg"]
[ext_resource type="Texture2D" uid="uid://dvx430022t0ua" path="res://Textures/Buttons/icons/next.png" id="7_dlb5i"]
[ext_resource type="Texture2D" uid="uid://bf4xxweukjvsb" path="res://Textures/Buttons/icons/interaction.png" id="8_8ns2c"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="8_ihypl"]
[ext_resource type="Texture2D" uid="uid://ikybt5yg3l6m" path="res://Textures/Buttons/icons/Generate.png" id="17_gy2j5"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/PullOutTab.gd" id="25_jtb01"]
[ext_resource type="Texture2D" uid="uid://tql14gtq05lf" path="res://Textures/UI/Information/invalid.png" id="26_mv20u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rkkw6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ags3"]
texture = ExtResource("3_82pmn")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_top = 30.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4t00w"]
content_margin_top = 4.0
content_margin_bottom = 4.0
texture = ExtResource("3_82pmn")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
expand_margin_left = 15.0

[sub_resource type="Theme" id="Theme_cn0xa"]
default_font = ExtResource("5_mj4tj")
default_font_size = 11

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j4116"]
resource_local_to_scene = true
shader = ExtResource("5_7m8xa")

[sub_resource type="Shader" id="Shader_tmadl"]
code = "shader_type canvas_item;

global uniform sampler2D colour_scheme: filter_nearest;
uniform float alpha: hint_range(0.0, 1.0);

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	COLOR = vec4(texture(colour_scheme, vec2(color.r, color.g)).rgb, color.a * alpha);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1g1u2"]
resource_local_to_scene = true
shader = SubResource("Shader_tmadl")
shader_parameter/alpha = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cec86"]
resource_local_to_scene = true
shader = SubResource("Shader_tmadl")
shader_parameter/alpha = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2eyqs"]
resource_local_to_scene = true
shader = SubResource("Shader_tmadl")
shader_parameter/alpha = null

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0g7gg"]
resource_local_to_scene = true
shader = SubResource("Shader_tmadl")
shader_parameter/alpha = null

[node name="GenerationButton" type="Control" node_paths=PackedStringArray("EM_check", "strong_check", "weak_check", "electroweak_check", "SaveStates", "Generate", "ViewDiagrams", "MinDegree", "MaxDegree", "Equation", "NoStatesToSave", "StatesSaved", "NoDiagramsFound", "GenerationCompleted", "ContentContainer", "TabButton", "MovingContainer")]
material = ExtResource("1_h3eo1")
layout_mode = 3
anchors_preset = 0
script = ExtResource("2_plgpl")
EM_check = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electromagnetic")
strong_check = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/strong")
weak_check = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/weak")
electroweak_check = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electro_weak")
SaveStates = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Save")
Generate = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Generate")
ViewDiagrams = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/View")
MinDegree = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MinDegree")
MaxDegree = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MaxDegree")
Equation = NodePath("MovingContainer/MovingContainer/PanelContainer/VBoxContainer/Equation")
NoStatesToSave = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave")
StatesSaved = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/StatesSaved")
NoDiagramsFound = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoDiagramsFound")
GenerationCompleted = NodePath("MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/GenerationSuccess")
ContentContainer = NodePath("MovingContainer/MovingContainer/PanelContainer")
TabButton = NodePath("MovingContainer/MovingContainer/Tab")
MovingContainer = NodePath("MovingContainer")
move_direction = 2
time_to_pull_out = 0.35
time_to_push_in = 0.35

[node name="MovingContainer" type="Control" parent="."]
use_parent_material = true
layout_mode = 2
anchors_preset = 0
offset_left = 167.0
offset_right = 167.0

[node name="SubmitFeedback" type="Control" parent="MovingContainer" node_paths=PackedStringArray("ContentContainer", "MovingContainer")]
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_left = -152.0
offset_top = 128.0
offset_right = -152.0
offset_bottom = 128.0
script = ExtResource("25_jtb01")
ContentContainer = NodePath("MovingContainer/PanelContainer")
MovingContainer = NodePath("MovingContainer")
move_direction = 3
stay_out_time = 2.0

[node name="MovingContainer" type="PanelContainer" parent="MovingContainer/SubmitFeedback"]
use_parent_material = true
layout_mode = 0
offset_right = 127.0
offset_bottom = 60.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_rkkw6")

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/SubmitFeedback/MovingContainer"]
use_parent_material = true
custom_minimum_size = Vector2(2.08165e-12, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_7ags3")

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 0

[node name="NoStatesToSave" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave"]
layout_mode = 2
texture = ExtResource("26_mv20u")
stretch_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoStatesToSave"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "No states to save
"

[node name="StatesSaved" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/StatesSaved"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "States saved"

[node name="NoDiagramsFound" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoDiagramsFound"]
layout_mode = 2
texture = ExtResource("26_mv20u")
stretch_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/NoDiagramsFound"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "No diagrams found"

[node name="GenerationSuccess" type="HBoxContainer" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="MovingContainer/SubmitFeedback/MovingContainer/PanelContainer/VBoxContainer/GenerationSuccess"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Generation finished
"

[node name="MovingContainer" type="HBoxContainer" parent="MovingContainer"]
material = ExtResource("1_h3eo1")
use_parent_material = true
layout_mode = 0
offset_left = -167.0
offset_bottom = 134.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/MovingContainer"]
use_parent_material = true
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_4t00w")

[node name="VBoxContainer" type="VBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 5
alignment = 2

[node name="OptionsContainer" type="VBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="PanelContainer" type="PanelContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer"]
use_parent_material = true
layout_mode = 2

[node name="DegreeContainer" type="HBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="MinDegree" type="SpinBox" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
layout_mode = 2
theme = SubResource("Theme_cn0xa")
theme_override_icons/updown = ExtResource("5_0rv06")
min_value = 1.0
max_value = 6.0
value = 1.0
alignment = 1
update_on_text_changed = true
select_all_on_focus = true
script = ExtResource("6_8ds75")

[node name="TextureRect2" type="TextureRect" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
custom_minimum_size = Vector2(15, 2.08165e-12)
layout_mode = 2
texture = ExtResource("7_dlb5i")
expand_mode = 5
stretch_mode = 5

[node name="MaxDegree" type="SpinBox" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
layout_mode = 2
theme = SubResource("Theme_cn0xa")
theme_override_icons/updown = ExtResource("5_0rv06")
min_value = 1.0
max_value = 6.0
value = 4.0
alignment = 1
update_on_text_changed = true
select_all_on_focus = true
script = ExtResource("6_8ds75")

[node name="TextureRect" type="TextureRect" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer"]
use_parent_material = true
layout_mode = 2
texture = ExtResource("8_8ns2c")
stretch_mode = 5

[node name="GridContainer" type="GridContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 2

[node name="electromagnetic" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mj4tj")
theme_override_font_sizes/font_size = 11
button_pressed = true
text = "EM"

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electromagnetic" instance=ExtResource("6_aanob")]

[node name="strong" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mj4tj")
theme_override_font_sizes/font_size = 11
button_pressed = true
text = "STRONG"

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/strong" instance=ExtResource("6_aanob")]

[node name="weak" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mj4tj")
theme_override_font_sizes/font_size = 11
button_pressed = true
text = "WEAK"

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/weak" instance=ExtResource("6_aanob")]

[node name="electro_weak" type="CheckButton" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_mj4tj")
theme_override_font_sizes/font_size = 11
button_pressed = true
text = "E. WEAK"

[node name="ButtonSoundComponent" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electro_weak" instance=ExtResource("6_aanob")]

[node name="Equation" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer" instance=ExtResource("4_ovcff")]
material = SubResource("ShaderMaterial_j4116")
custom_minimum_size = Vector2(120, 21)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Save" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_ihypl")]
material = SubResource("ShaderMaterial_1g1u2")
layout_mode = 2
icon = ExtResource("5_rmc36")
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Save" instance=ExtResource("6_kbwkg")]
tooltip = "Save states"

[node name="Generate" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_ihypl")]
material = SubResource("ShaderMaterial_cec86")
layout_mode = 2
icon = ExtResource("17_gy2j5")
minimum_size = Vector2(29, 24)
expand_icon = true
disabled = true
icon_use_parent_material = true

[node name="Tooltip" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Generate" instance=ExtResource("6_kbwkg")]
tooltip = "Generate"

[node name="View" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("8_ihypl")]
material = SubResource("ShaderMaterial_2eyqs")
layout_mode = 2
icon = ExtResource("6_e14j5")
minimum_size = Vector2(24, 23)
disabled = true

[node name="Tooltip" parent="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/View" instance=ExtResource("6_kbwkg")]
tooltip = "View generated diagrams"

[node name="Tab" parent="MovingContainer/MovingContainer" instance=ExtResource("6_7e8c8")]
material = SubResource("ShaderMaterial_0g7gg")
layout_mode = 2
TabIcon = ExtResource("4_xnawx")
icon_use_parent_material = true

[connection signal="push_in_finished" from="MovingContainer/SubmitFeedback" to="." method="_on_submit_feedback_push_in_finished"]
[connection signal="value_changed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MinDegree" to="." method="_on_min_degree_value_changed"]
[connection signal="value_changed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/PanelContainer/DegreeContainer/MaxDegree" to="." method="_on_max_degree_value_changed"]
[connection signal="toggled" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electromagnetic" to="." method="_on_electromagnetic_toggled"]
[connection signal="toggled" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/weak" to="." method="_on_weak_toggled"]
[connection signal="toggled" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/OptionsContainer/GridContainer/electro_weak" to="." method="_on_electro_weak_toggled"]
[connection signal="pressed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/Generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="MovingContainer/MovingContainer/PanelContainer/VBoxContainer/HBoxContainer/View" to="." method="_on_view_pressed"]
